unpackaged/main/default/objects/pse__Filter_Set__c/pse__Filter_Set__c.object-meta.xml
<CustomObject>
    <description>Represents a collection of filters that determines which resources or projects display in the Resource or Project Planners.</description>
    <label>Filter Set</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>