unpackaged/main/default/objects/pse__Filter_Set__c/fields/pse__Feature__c.field-meta.xml
<CustomField>
    <fullName>pse__Feature__c</fullName>
    <inlineHelpText>Restricts where this filter set will be shown as an option. Currently only "Resource Planner" and "Project Planner" are supported.</inlineHelpText>
    <label>Available In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resource Planner</fullName>
            </value>
            <value>
                <fullName>Project Planner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>