unpackaged/main/default/objects/pse__Filter_Set__c/fields/pse__Filter_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Filter_Set_Name__c</fullName>
    <description>The name of the Filter Set.</description>
    <inlineHelpText>The name of the Filter Set.</inlineHelpText>
    <label>Filter Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>