unpackaged/main/default/objects/pse__Filter_Set__c/fields/pse__Is_Private__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true only the owner will be able to view and use this filter. Otherwise any user who has sharing access may make use of it.</inlineHelpText>
    <label>Is Private</label>
    <type>Checkbox</type>
</CustomField>