unpackaged/main/default/objects/pse__Filter_Set__c/fields/pse__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>pse__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, indicates the filter set is the default.</description>
    <inlineHelpText>When checked, indicates the filter set is the default.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>