unpackaged/main/default/objects/pse__Filter_Set__c/fields/pse__Related_SObject_ID__c.field-meta.xml
<CustomField>
    <fullName>pse__Related_SObject_ID__c</fullName>
    <description>The ID of a related SObject, such as a project ID.</description>
    <inlineHelpText>Filter sets that can be associated with other objects, such as projects.</inlineHelpText>
    <label>Related SObject</label>
    <length>18</length>
    <type>Text</type>
</CustomField>