unpackaged/main/default/objects/pse__Filter_Set__c/fields/pse__SObject__c.field-meta.xml
<CustomField>
    <fullName>pse__SObject__c</fullName>
    <inlineHelpText>The API name of the SObject this set of filters operates on.</inlineHelpText>
    <label>SObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>